--- a/.flowconfig
+++ b/.flowconfig
@@ -18,6 +18,7 @@ esproposal.class_static_fields=enable
 esproposal.class_instance_fields=enable
 suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
 module.name_mapper='.*\(\.css\)' -> 'CSSModule'
+module.name_mapper='^ace/\(.*\)$' -> '<PROJECT_ROOT>/node_modules/ace-builds/src-min-noconflict/\1'
 module.system=haste
 strip_root=true
 module.file_ext=.js
